# OOPD_PA_2_Korotych

./: Board.cpp  Board.h  CLI.cpp  CLI.h  CMakeLists.txt  CanvasController.cpp  CanvasController.h  Circle.cpp  Circle.h  Figure.cpp  Figure.h  LICENSE  README.md  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h  Storage.cpp  Storage.h  Triangle.cpp  Triangle.h  main.cpp
Figures/: Circle.cpp  Circle.h  Figure.cpp  Figure.h  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
